Update stmt & transaction
