# docs/swagger.json
@@ -19,7 +19,7 @@
     "paths": {
         "/client/create": {
             "post": {
-                "description": "An API for create new client",
+                "description": "Create a client for authorization",
                 "consumes": [
                     "application/json"
                 ],
@@ -29,10 +29,10 @@
                 "tags": [
                     "Client"
                 ],
-                "operationId": "create-client",
+                "operationId": "client-create",
                 "parameters": [
                     {
-                        "description": "Client payload",
+                        "description": "Request payload",
                         "name": "payload",
                         "in": "body",
                         "required": true,
@@ -42,12 +42,12 @@
                     }
                 ],
                 "responses": {
-                    "200": {
+                    "201": {
                         "description": "Success response",
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/base.SuccessResponse"
+                                    "$ref": "#/definitions/base.SuccessCreatedResponse"
                                 },
                                 {
                                     "type": "object",
@@ -224,6 +224,23 @@
                 }
             }
         },
+        "base.SuccessCreatedResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string"
+                },
+                "data": {},
+                "message": {
+                    "type": "string",
+                    "example": "Success"
+                },
+                "status": {
+                    "type": "integer",
+                    "example": 201
+                }
+            }
+        },
         "base.SuccessResponse": {
             "type": "object",
             "properties": {
@@ -270,7 +287,7 @@
                 },
                 "secret": {
                     "type": "string",
-                    "example": "test"
+                    "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOiIyMDIzLTEwLTIzVDEwOjU0OjUwLjQ4OTg0MiswNzowMCJ9.vl8apKYm9UQbj1qaG-BB2eStTEYy1ZJpPoVyuoXDr1k"
                 }
             }
         },
